# TicTacToe

./: LICENSE  README.md  pyproject.toml
src/tests/: test_ai.py  test_board.py
src/tic_tac_toe/: app.py  gameloop.py
src/tic_tac_toe/core/ai/: agents.py
src/tic_tac_toe/core/game/: board.py  player.py
src/tic_tac_toe/core/visuals/: art.py  menu.py
src/tic_tac_toe/utils/: keymap.py
