[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tic_tac_toe"
version = "0.1.0"
authors = [
  { name="Alan Quintero", email="alanpy60@gmail.com" },
]
description = "A simple command line tic-tac-toe game."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "wcwidth == 0.2.13",
]

[project.scripts]
ttt = "tic_tac_toe.app:main"
"tic_tac_toe.run" = "tic_tac_toe.app:main"

[project.urls]
Homepage = "https://github.com/Caeneus60/TicTacToe"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]